# dictapi

./: .gitignore  CONTEXT.md  README.md  config.toml  pyproject.toml
dictapi/: __init__.py  __main__.py  config.py  daemon.py  keywatcher.py  recorder.py  transcriber.py  tray.py  typer.py
